--- a/index.html
+++ b/index.html
@@ -72,10 +72,28 @@
                     <!--Education-->
                 <div> 
                     <h4 class="edu">Education </h4>
-                    <p class="university">
-                        National Technic University of Ukraine - Kyiv Politechnical Institute </p>
-                    <h4 class="management">Computer Developer </h4>
+                    <ul class="edu">
+                        <li class="univ">
+                            <p class="university">
+                        STATE UNIVERSITY OF TRADE AND ECONOMICS / KYIV NATIONAL UNIVERSITY OF TRADE AND ECONOMICS </p>
+                    <h4 class="management">Master of Government Finance </h4>
+                    <h5 class="dt">September 2008 - May 2010   |   Ukraine</h5>
+                        </li>
+                        <li class="univ">
+                            <p class="university">
+                        KYIV NATIONAL LINGUISTIC UNIVERSITY </p>
+                    <h4 class="management">Teacher of English & Ukrainian, Bachelor</h4>
+                    <h5 class="dt">September 2000 - June 2004   |   Ukraine</h5>
+                        </li>
+                        <li class="univ">
+                            <p class="university">
+                        National Technical University of Ukraine
+“Igor Sikorsky Kyiv Polytechnic Institute” </p>
+                    <h4 class="management">Computer Developer, Bachelor </h4>
                     <h5 class="dt">September 1995 - June 2001   |   Ukraine</h5>
+                        </li>
+                    </ul>
+                    
                 </div>
             </div>
 
