--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                 <div><h1 class="name">Andrii Blyzniuk</h1></div>
                 <div class="about">
                 <p>20 years of project management, public and lobbying activities on top-management positions in different NGO <br>
-                2 years of public service<br>
-                English (upper-intermediate), Ukrainian (native) </p> </div>
+                2 years of public service </p> </div>
             </div>
             <!-- Projects
             <div class="projects">
@@ -170,9 +169,9 @@
                <p><span class="contact-type">E:</span><a href="mailto:puukraine@gmail.com"  class="contact-link">puukraine@gmail.com
                </a> </p> 
 
-               <p><span class="contact-type">F:</span><a href="https://www.facebook.com/profile.php?id=100004226708410" class="contact-link">https://www.facebook.com/profile.php?id=100004226708410</a> </p> 
+               <p><span class="contact-type">F:</span><a href="https://www.facebook.com/profile.php?id=100004226708410" class="contact-link">Facebook</a> </p> 
 
-               <p><span class="contact-type">L:</span><a href="https://www.linkedin.com/in/parent-union-93866a173/" class="contact-link">https://www.linkedin.com/in/parent-union-93866a173/</a> </p> 
+               <p><span class="contact-type">L:</span><a href="https://www.linkedin.com/in/parent-union-93866a173/" class="contact-link">Linkedin</a> </p> 
 
                
 
@@ -204,6 +203,15 @@
                     <li class="soft-item"> <span class="text">GTD</span></li>
                     <li class="soft-item"> <span class="text">Teamwork</span></li> 
                     <li class="soft-item"> <span class="text">CRM</span></li>                    
+                </ul>
+             </div>
+             <!--Languages-->
+            
+            <div class="soft">
+                <h3 class="sidebar-title-soft">Languages</h3>
+                <ul class="soft-list">
+                    <li class="soft-item"> <span class="text">English (Upper-intermediate)</span></li>
+                    <li class="soft-item"> <span class="text">Ukrainian (Native)</span></li>                 
                 </ul>
              </div>
         </aside>
